<resources>
    <string name="mh_my_account">My account</string>
    <string name="mh_actions">Actions</string>
    <string name="mh_clear_data">Clear cached data</string>
    <string name="mh_debug_stuff">Debug stuff</string>
    <string name="mh_start_my_test_activity">Start MyTestActivity</string>
    <string name="mh_my_repositories">My repositories</string>
    <string name="mh_my_test_activity">MyTestActivity</string>
    <string name="mh_octocat">Octocat</string>
    <string name="mh_stars">%d \nStars</string>
    <string name="mh_watchers">%d \nWatchers</string>
    <string name="mh_forks">%d \nForks</string>
    <string name="mh_login">User identifier</string>
    <string name="mh_password_optional">Password (optional)</string>
    <string name="mh_otp_optional">OTP code (optional)</string>
    <string name="mh_login_refresh">Log in / Refresh</string>
    <string name="mh_avatar">Avatar</string>
    <string name="mh_are_you_sure_clear">Are you sure? All saved data will be deleted.</string>
    <string name="mh_clear">Clear</string>
    <string name="mh_cancel">Cancel</string>
    <string name="mh_logger">Logger</string>
    <string name="mh_set_orientation_to_portrait">Set orientation to: PORTRAIT</string>
    <string name="mh_set_orientation_to_landscape">Set orientation to: LANDSCAPE</string>
    <string name="mh_set_orientation_to_unspecified">Set orientation to: UNSPECIFIED</string>
    <string name="mh_about">About</string>
    <string name="mh_app_name">MyHub</string>
</resources>
