<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <ProgressBar
            android:id="@+id/mh_fma_pb_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10000"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            />
        <TextView
            android:id="@+id/mh_fma_tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:typeface="monospace"
            android:textSize="12sp"
            tools:text="loaded: 11.11.11 22:22:22"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/mh_fma_ed_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mh_login"
                android:inputType="textNoSuggestions"
                android:typeface="monospace"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/mh_fma_ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mh_password_optional"
                android:inputType="textPassword"
                android:typeface="monospace"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/mh_fma_ed_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mh_otp_optional"
                android:inputType="numberPassword"
                android:typeface="monospace"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/mh_fma_b_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mh_login_refresh"
            android:layout_margin="16dp"
            />

        <include layout="@layout/mh_basic_user_info" />

    </LinearLayout>

</ScrollView>